feat: Update readme and json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pesapaljs-v3",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Integrate PesaPal into your Node application",
   "homepage": "https://github.com/CollinsMunene/ch-pesapaljs-v3",
   "repository": {
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/CollinsMunene/pesapaljs-v3/issues"
   },
-  "main": "pesapal",
+  "main": "lib/pesapal",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
