--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "coop"
   ],
   "author": "Collins Munene <collinshillary1@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "json": "^11.0.0",
+    "request": "^2.88.2"
+  }
 }
